--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.4",
+    "cloudinary-react": "^1.8.1",
+    "firebase": "^10.14.1",
     "framer-motion": "^11.5.4",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.7",
     "react-icons": "^5.3.0",
@@ -22,6 +28,7 @@
     "react-router-dom": "^6.24.0",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
+    "socket.io": "^4.8.0",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.1.14"
   },
@@ -39,5 +46,5 @@
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
   },
-  "proxy": "https://expense-trackerserver.onrender.com"
+  "proxy": "https://event-management-system-backend-dtrl.onrender.com"
 }
