--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^10.14.1",
     "framer-motion": "^11.5.4",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-country-flag": "^3.1.0",
